--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 = Russian =
-Примеры использования либы можно посмотреть в директории 'samples'
+РџСЂРёРјРµСЂС‹ РёСЃРїРѕР»СЊР·РѕРІР°РЅРёСЏ Р»РёР±С‹ РјРѕР¶РЅРѕ РїРѕСЃРјРѕС‚СЂРµС‚СЊ РІ РґРёСЂРµРєС‚РѕСЂРёРё 'samples'
